--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,5 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
+# This is a test workflow that has been made to test listening to deployment status events
+name: ci_basic_deployment
 
 # Controls when the workflow will run
 on:
