--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,5 +1,5 @@
 # This is a test workflow that has been made to test listening to deployment status events
-name: ci_basic_deployment
+name: ci_hello_world
 
 # Controls when the workflow will run
 on:
